welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: value avance is not a member of Unit
    case 2 => setCouleurBrosse(Color.blue) avance(2)
                                           ^